--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
 
         </div>
         <div class='row'>
-            <div class='column column-50'>
+            <div class='column column-30'>
                 <div class='content'>
-                    <h3>
-                        Check out this dank line graph uh ha ha
-                    </h3>
-
+                    <button class='button' onClick="window.location.reload();">
+                        Restart
+                    </button>
+                    <h4>
+                        Click restart to watch the animation again!
+                    </h4>
                     
                 </div>
             </div>
-            <div class='column column-50'>
+            <div class='column column-60'>
                 <div class='chart'>
 
                 </div>
